css bugfixes for menu, dark mode switch and mobile layout

--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -1,10 +1,10 @@
-$content_width: 872px;
+$content_width: 836px;
 
 .hero {
 	position: relative;
 	width: 100%;
 	height: 75vh;
-	min-height: 30em;
+	min-height: 42em;
 	max-width: 1920px;
 	margin: -4.444444rem auto 1.618rem;
 }
@@ -38,7 +38,7 @@ $content_width: 872px;
 .hero__text {
 	color: black;
 	max-width: $content_width;
-	padding: 2rem calc(2rem + env(safe-area-inset-left));
+	padding: 2rem calc(1rem + env(safe-area-inset-left));
 	margin: auto;
 	vertical-align: bottom;
 }
@@ -108,6 +108,10 @@ $content_width: 872px;
 	.hero__date {
 		color: hsl(0,0,70);
 	}
+}
+
+@media only screen and ( orientation: landscape ) {
+	.hero { min-height: 30em; }
 }
 
 @media only screen and ( min-width: 1400px ) {
